--- a/textproc/py-libxml2/Makefile
+++ b/textproc/py-libxml2/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.35 2010/04/13 16:05:01 drochner Exp $
+# $NetBSD: Makefile,v 1.36 2010/04/15 11:49:28 jmcneill Exp $
 
 DISTNAME=	libxml2-2.7.7
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
@@ -24,6 +24,8 @@ SUBST_FILES.setup=	setup.py
 SUBST_SED.setup=	-e "/ROOT/s,'/usr','${BUILDLINK_PREFIX.libxml2}',g" \
 			-e "/^\"/s,/usr/include,${BUILDLINK_PREFIX.iconv}/include,g" \
 			-e "/^\"/s,/usr/local/include,${BUILDLINK_PREFIX.iconv}/include,g"
+
+BUILD_DEPENDS+=	${PYPKGPREFIX}-expat>=0:../../textproc/py-expat
 
 BUILDLINK_API_DEPENDS.libxml2+=	libxml2>=${PKGVERSION}
 .include "../../textproc/libxml2/buildlink3.mk"
