--- a/security/Makefile
+++ b/security/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.379 2010/04/14 18:46:26 schmonz Exp $
+# $NetBSD: Makefile,v 1.380 2010/04/15 20:26:02 jakllsch Exp $
 #
 
 COMMENT=	Security tools
@@ -95,6 +95,7 @@ SUBDIR+=	keepassx
 SUBDIR+=	keychain
 SUBDIR+=	knc
 SUBDIR+=	kssh
+SUBDIR+=	kstart
 SUBDIR+=	kth-krb4
 SUBDIR+=	lasso
 SUBDIR+=	libassuan
