--- a/print/tex-pgfplots/Makefile
+++ b/print/tex-pgfplots/Makefile
@@ -1,11 +1,15 @@
-# $NetBSD: Makefile,v 1.1.1.1 2010/04/09 21:45:43 markd Exp $
-# TeX Live Revision 16576
+# $NetBSD: Makefile,v 1.2 2010/04/15 20:44:34 minskim Exp $
+# TeX Live Revision 17670
 
 DISTNAME=	pgfplots
-PKGNAME=	tex-${DISTNAME}-1.2.2
+PKGNAME=	tex-${DISTNAME}-1.3.1
 
-MAINTAINER=	pkgsrc-users@NetBSD.org
-COMMENT=	Create normal/logarithmic plots in LaTeX
+MAINTAINER=	minskim@NetBSD.org
+COMMENT=	LaTeX package to create normal/logarithmic plots
+
+DEPENDS+=	tex-graphics-[0-9]*:../../print/tex-graphics
+DEPENDS+=	tex-pgf-[0-9]*:../../print/tex-pgf
+DEPENDS+=	tex-tools-[0-9]*:../../print/tex-tools
 
 .include "../../print/texlive/package.mk"
 .include "../../mk/bsd.pkg.mk"
