--- a/print/Makefile
+++ b/print/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.364 2010/04/12 21:21:49 minskim Exp $
+# $NetBSD: Makefile,v 1.365 2010/04/15 20:55:19 minskim Exp $
 #
 
 COMMENT=	Desktop publishing
@@ -187,6 +187,8 @@ SUBDIR+=	tex-cancel
 SUBDIR+=	tex-cancel-doc
 SUBDIR+=	tex-capt-of
 SUBDIR+=	tex-capt-of-doc
+SUBDIR+=	tex-captdef
+SUBDIR+=	tex-captdef-doc
 SUBDIR+=	tex-caption
 SUBDIR+=	tex-caption-doc
 SUBDIR+=	tex-carlisle
