--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.718 2010/04/13 01:07:37 seb Exp $
+# $NetBSD: Makefile,v 1.719 2010/04/16 04:08:27 seb Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -408,6 +408,7 @@ SUBDIR+=	p5-Rose-HTMLx-Form-Field-Serial
 SUBDIR+=	p5-Rose-HTMLx-Form-Related
 SUBDIR+=	p5-Rose-URI
 SUBDIR+=	p5-SVN-Web
+SUBDIR+=	p5-Starlet
 SUBDIR+=	p5-Starman
 SUBDIR+=	p5-Task-CatInABox
 SUBDIR+=	p5-Task-Catalyst-Tutorial
