--- a/devel/p5-Parallel-Prefork/Makefile
+++ b/devel/p5-Parallel-Prefork/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2010/04/16 03:55:42 seb Exp $
+# $NetBSD: Makefile,v 1.2 2010/04/16 04:16:54 seb Exp $
 #
 
 DISTNAME=	Parallel-Prefork-0.08
@@ -7,7 +7,7 @@ CATEGORIES=	parallel
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Parallel/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://search.cpan.org/Parallel-Prefork/
+HOMEPAGE=	http://search.cpan.org/dist/Parallel-Prefork/
 COMMENT=	Perl 5 simple prefork server framework
 LICENSE=	${PERL5_LICENSE}
 
