--- a/x11/libdrm/Makefile
+++ b/x11/libdrm/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.10 2009/08/29 15:37:47 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2010/04/16 13:43:36 tnn Exp $
 #
 
-DISTNAME=		libdrm-2.4.13
+DISTNAME=		libdrm-2.4.20
 CATEGORIES=		x11 graphics
 MASTER_SITES=		http://dri.freedesktop.org/libdrm/
 EXTRACT_SUFX=		.tar.bz2
@@ -23,7 +23,7 @@ GNU_CONFIGURE=		yes
 ATOMIC_OPS_CHECK?=	0
 
 SUBST_CLASSES+=		atomic
-SUBST_FILES.atomic=	libdrm/xf86drm.h
+SUBST_FILES.atomic=	xf86drm.h
 SUBST_MESSAGE.atomic=	Configuring xf86drm.h's atomic operations.
 SUBST_STAGE.atomic=	pre-configure
 SUBST_VARS.atomic=	ATOMIC_OPS_CHECK
