--- a/x11/xf86-video-nv/Makefile
+++ b/x11/xf86-video-nv/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.18 2010/04/09 08:53:04 tnn Exp $
+# $NetBSD: Makefile,v 1.19 2010/04/16 13:50:51 tnn Exp $
 
 DISTNAME=	xf86-video-nv-2.1.14
+PKGREVISION=	1
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_XORG:=driver/}
 EXTRACT_SUFX=	.tar.bz2
