--- a/lang/php53/Makefile
+++ b/lang/php53/Makefile
@@ -1,6 +1,10 @@
-# $NetBSD: Makefile,v 1.2 2010/03/21 17:10:01 jdolecek Exp $
+# $NetBSD: Makefile,v 1.3 2010/04/16 15:19:23 taca Exp $
 
-PKGREVISION=		1
+#
+# We can't omit PKGNAME here to handle PKG_OPTIONS.
+#
+PKGNAME=		php-${PHP_BASE_VERS}
+PKGREVISION=		2
 CATEGORIES=		lang
 HOMEPAGE=		http://www.php.net/
 COMMENT=		PHP Hypertext Preprocessor version 5
