--- a/lang/guile/Makefile
+++ b/lang/guile/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.94 2010/03/24 19:43:25 asau Exp $
+# $NetBSD: Makefile,v 1.95 2010/04/18 00:31:55 gdt Exp $
 
 DISTNAME=		guile-1.8.7
-PKGREVISION=		2
+PKGREVISION=		3
 CATEGORIES=		lang
 MASTER_SITES=		${MASTER_SITE_GNU:=guile/}
 
