--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1330 2010/04/16 03:55:59 seb Exp $
+# $NetBSD: Makefile,v 1.1331 2010/04/18 04:19:18 seb Exp $
 #
 
 COMMENT=	Development utilities
@@ -679,6 +679,7 @@ SUBDIR+=	p5-Heap
 SUBDIR+=	p5-Hook-LexWrap
 SUBDIR+=	p5-IMDB-Film
 SUBDIR+=	p5-IO
+SUBDIR+=	p5-IO-AIO
 SUBDIR+=	p5-IO-All
 SUBDIR+=	p5-IO-Capture
 SUBDIR+=	p5-IO-CaptureOutput
