--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1331 2010/04/18 04:19:18 seb Exp $
+# $NetBSD: Makefile,v 1.1332 2010/04/18 15:18:00 seb Exp $
 #
 
 COMMENT=	Development utilities
@@ -437,6 +437,7 @@ SUBDIR+=	p5-Algorithm-Merge
 SUBDIR+=	p5-AnnoCPAN-Perldoc
 SUBDIR+=	p5-Any-Moose
 SUBDIR+=	p5-AnyEvent
+SUBDIR+=	p5-AnyEvent-AIO
 SUBDIR+=	p5-App-CLI
 SUBDIR+=	p5-App-Cmd
 SUBDIR+=	p5-App-FatPacker
