--- a/databases/Makefile
+++ b/databases/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.328 2010/04/17 09:35:57 seb Exp $
+# $NetBSD: Makefile,v 1.329 2010/04/18 15:33:38 seb Exp $
 #
 
 COMMENT=	Databases
@@ -80,6 +80,7 @@ SUBDIR+=	openldap-server
 SUBDIR+=	openldap-smbk5pwd
 SUBDIR+=	oraedit
 SUBDIR+=	p5-AddressBook
+SUBDIR+=	p5-AnyEvent-BDB
 SUBDIR+=	p5-Apache-DBI
 SUBDIR+=	p5-BDB
 SUBDIR+=	p5-BerkeleyDB
