--- a/time/Makefile
+++ b/time/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.112 2010/04/10 22:11:33 markd Exp $
+# $NetBSD: Makefile,v 1.113 2010/04/21 16:52:27 tnn Exp $
 #
 
 COMMENT=	Clocks, calendars, daily planners and other time related applications
@@ -115,7 +115,6 @@ SUBDIR+=	rsibreak
 SUBDIR+=	rsibreak-kde3
 SUBDIR+=	ruby-tzinfo
 SUBDIR+=	saytime
-SUBDIR+=	sunbird
 SUBDIR+=	sunclock
 SUBDIR+=	swisswatch
 SUBDIR+=	tdl
