--- a/mail/Makefile
+++ b/mail/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.394 2010/04/09 12:41:32 obache Exp $
+# $NetBSD: Makefile,v 1.395 2010/04/21 16:59:28 tnn Exp $
 #
 
 COMMENT=	Electronic mail utilities
@@ -297,7 +297,6 @@ SUBDIR+=	sympa
 SUBDIR+=	t-prot
 SUBDIR+=	teapop
 SUBDIR+=	thunderbird
-SUBDIR+=	thunderbird2
 SUBDIR+=	tmda
 SUBDIR+=	tnef
 SUBDIR+=	tnef2txt
