--- a/lang/clang/Makefile
+++ b/lang/clang/Makefile
@@ -1,4 +1,8 @@
-# $NetBSD: Makefile,v 1.37 2015/03/04 09:59:57 tnn Exp $
+# $NetBSD: Makefile,v 1.38 2015/03/04 13:57:42 tnn Exp $
+
+MAKE_DIRS=		etc/llvm
+INSTALLATION_DIRS=	bin lib libexec
 
 .include "../../lang/clang/options.mk"
+.include "../../textproc/libxml2/buildlink3.mk"
 .include "../../lang/clang/Makefile.common"
