--- a/lang/libLLVM34/Makefile
+++ b/lang/libLLVM34/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2015/03/04 19:34:27 tnn Exp $
+# $NetBSD: Makefile,v 1.2 2015/03/04 20:33:38 tnn Exp $
 
 DISTNAME=	llvm-${PKGVERSION_NOREV}.src
 PKGNAME=	libLLVM34-3.4.2
@@ -72,6 +72,8 @@ PLIST_SUBST+=		SOEXT="dylib"
 .else
 PLIST_SUBST+=		SOEXT="so"
 .endif
+
+BUILDLINK_TRANSFORM+=	l:LLVMMipsDesc:LLVMMipsAsmPrinter:LLVMMipsDesc
 
 .include "../../lang/python/tool.mk"
 .include "../../mk/bsd.pkg.mk"
